add home button to tool pages

--- a/gif-creator.html
+++ b/gif-creator.html
@@ -39,6 +39,18 @@
       margin-bottom: 0.5rem;
     }
 
+    .home-link {
+      color: #7b68ee;
+      text-decoration: none;
+      font-size: 0.9rem;
+      display: inline-block;
+      margin-bottom: 0.5rem;
+    }
+
+    .home-link:hover {
+      text-decoration: underline;
+    }
+
     .nav-link {
       color: #7b68ee;
       text-decoration: none;
@@ -427,6 +439,7 @@
 <body>
   <div class="container">
     <header>
+      <a href="index.html" class="home-link">← Home</a>
       <h1>Rocket 5 GIF Creator</h1>
       <a href="gif-viewer.html" class="nav-link">Try GIF Viewer →</a>
     </header>
