Change GIF creator defaults to 30 fps and very high quality

--- a/gif-creator.html
+++ b/gif-creator.html
@@ -494,20 +494,20 @@
             <div class="setting-label">FPS</div>
             <select id="fps-select">
               <option value="5">5 fps</option>
-              <option value="10" selected>10 fps</option>
+              <option value="10">10 fps</option>
               <option value="15">15 fps</option>
               <option value="20">20 fps</option>
               <option value="24">24 fps</option>
-              <option value="30">30 fps</option>
+              <option value="30" selected>30 fps</option>
             </select>
           </div>
           <div class="setting">
             <div class="setting-label">Quality</div>
             <select id="quality-select">
               <option value="low">Low</option>
-              <option value="medium" selected>Medium</option>
+              <option value="medium">Medium</option>
               <option value="high">High</option>
-              <option value="very-high">Very High</option>
+              <option value="very-high" selected>Very High</option>
             </select>
           </div>
           <div class="setting">
